Replaced deprecated classes with new Url connection.